Fixed gaps and hover, added anchor-elements

--- a/style.scss
+++ b/style.scss
@@ -187,7 +187,8 @@ body {
         border-radius: 30px;
         width: 378px;
         height: 473px;
-        transition: scale 0.5s ease;
+        transform: scale(1);
+        transition: transform 0.5s ease;
         position: relative;
         &_medium {
             height: 512px;
@@ -195,10 +196,6 @@ body {
 
         &_big {
             height: 551px;
-        }
-
-        &:hover {
-            scale: 110%;
         }
     }
 
@@ -306,7 +303,7 @@ body {
     &__box {        
         display: flex;
         flex-direction: column;
-        gap: 36px;
+        gap: 32px;
         z-index: 2;
     }
 
@@ -437,6 +434,14 @@ body {
                 background-color: $thirdColor;
                 color: $secondColor;
                 cursor: pointer;
+            }
+        }
+    }
+
+    .about {
+        &__card {
+            &:hover {
+                transform: scale(1.1);
             }
         }
     }
